# mps

./: .gitignore  CMakeLists.txt  hello_sdl.c  main.c
include/: canvas.h  circle.h  color.h  log.h  object.h  point2d.h  rectangle.h  util.h  vector2d.h
include/phys/: circle.h  object.h  rectangle.h  universe.h
learn/: pointers.c
src/: canvas.c  circle.c  color.c  log.c  mps.c  object.c  point2d.c  rectangle.c  vector2d.c
src/phys/: circle.c  object.c  rectangle.c  universe.c
